--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">GDG Finder</string>
+    <string name="app_name">GDG</string>
+    <string name="app_title">GDG Finder</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add_gdg">"Couldn't find a GDG in your region? Great, go ahead and start one. Fill the form below and
         expect to hear from us shortly! "
