--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">GDG</string>
-    <string name="app_title">GDG Finder</string>
+    <string name="app_name">GDG Finder</string>
+    <string name="app_title">GDG</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add_gdg">"Couldn't find a GDG in your region? Great, go ahead and start one. Fill the form below and
         expect to hear from us shortly! "
@@ -17,7 +17,7 @@
         and tech talks, to hackathons. Google Developers supports and recognizes GDG chapters, but doesn’t own or manage
         them.
     </string>
-    <string name="about_google_developer_groups">About Google Developer Groups</string>
+    <string name="about_google_developer_groups">Google Developer Groups</string>
     <string name="gdg_description_bullets">️Run by passionate individuals in local developer communities\n
         ️A group to share ideas and network with fellow developers \n
         ️A place to learn about Google technologies and development tools \n
@@ -39,4 +39,5 @@
     <string name="submitted">Submitted, no need to submit again</string>
     <string name="done">Done</string>
     <string name="submit">Submit</string>
+    <string name="okay">OK</string>
 </resources>
