Fix text formatting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_title">GDG</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add_gdg">"Couldn't find a GDG in your region? Great, go ahead and start one. Fill the form below and
-        expect to hear from us shortly! "
+        expect to hear from us shortly!"
     </string>
     <string name="application_submitted">Got your application request!! Oh well, not really. This is a test form just
         for educational purposes. If you really want to submit your application please visit the website!
@@ -18,10 +18,11 @@
         them.
     </string>
     <string name="about_google_developer_groups">Google Developer Groups</string>
-    <string name="gdg_description_bullets">️Run by passionate individuals in local developer communities\n
-        ️A group to share ideas and network with fellow developers \n
-        ️A place to learn about Google technologies and development tools \n
-        Open to and free for all interested
+    <string name="gdg_description_bullets">
+        ️Run by passionate individuals in local developer communities.\n\n
+        ️∙ A group to share ideas and network with fellow developers\n
+        ∙ ️A place to learn about Google technologies and development tools\n\n
+        Open to and free for all interested.
     </string>
     <string name="waiting_for_location_and_network">Waiting for location and network result.\n\n If running on an
         emulator open the Maps app to enable location services.
@@ -35,7 +36,7 @@
     <string name="city_label">city</string>
     <string name="country_label">country</string>
     <string name="region_label">region</string>
-    <string name="enter_motivation">Please enter your motivation in 1-2 sentences</string>
+    <string name="enter_motivation">Please enter your motivation in 1–2 sentences</string>
     <string name="submitted">Submitted, no need to submit again</string>
     <string name="done">Done</string>
     <string name="submit">Submit</string>
