--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,7 +66,7 @@
     <string name="thank_you">Thank you!</string>
     <string name="demo_be_aware">This is a demo form. Visit the website for an original apply.</string>
 
-    <string name="no_connection_tap">No Connection. Check Internet.\nTap icon to retry.</string>
+    <string name="no_connection_tap">Can\'t connect. Check Internet.\nTap icon to retry.</string>
     <string name="some_error_tap">Some error. Details in logs.\nTap icon to retry.</string>
 
     <string name="global">Global</string>
